Improve performance of PlaceHolderData fetching